# Git-from-scratch-cpp

./: CMakeLists.txt  README.md  launch.sh  test_mygit.sh
.github/workflows/: build.yml  codeql.yml  node.js.yml
backend/: README.md  TODO.md  pom.xml
backend/src/main/resources/: application.properties
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js  index.js
frontend/src/api/: repositoryApi.js
frontend/src/components/: CommitDetailView.js  ErrorDisplay.js  Header.js  LoadingIndicator.js  RefSelector.js
frontend/src/components/RepositoryList/: RepositoryList.js  RepositoryList.module.css
frontend/src/components/common/: AnimatedListItem.js  ErrorDisplay.js  LoadingIndicator.js  Logo.js  PageTransition.js
frontend/src/components/layout/: Header.js
frontend/src/hooks/: useFetchData.js
frontend/src/pages/: HomePage.js  NotFoundPage.js  RepositoryPage.js
frontend/src/services/: repositoryService.js
frontend/src/styles/: global.css  theme.js
frontend/src/utils/: helpers.js
frontend/src/views/: BranchesView.js  CodeView.js  CommitsView.js  GraphView.js  TagsView.js
include/headers/: commands.h  diff.h  index.h  objects.h  refs.h  utils.h
mygitImplementation/: README.md  info.md  test_mygit.sh
mygitImplementation/include/headers/: commands.h
mygitImplementation/src/: main.cpp
mygitImplementation/src/commands/: commands.cpp  objects.cpp  refs.cpp  utils.cpp
src/: CMakeLists.txt  main.cpp
src/commands/: commands.cpp  diff.cpp  index.cpp  objects.cpp  refs.cpp  utils.cpp
(+28 files in other folders)
